third_party/move/move-compiler-v2/tests/uninit-use-checker/if_assigns_no_else_unfoldable.move
script {
fun main(p: bool) {
    let x;
    if (p) x = 42;
    assert!(x == 42, 42);
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
